--- a/react-projects/multiple-pages-app/package.json
+++ b/react-projects/multiple-pages-app/package.json
@@ -7,10 +7,9 @@
     "lodash": "^4.17.15",
     "node-sass": "^4.12.0",
     "react": "^16.9.0",
+    "react-avatar-editor": "^11.0.7",
     "react-bootstrap": "^1.0.0-beta.12",
     "react-dom": "^16.9.0",
-    "react-easy-crop": "^1.16.1",
-    "react-router": "^5.0.1",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.1.1"
   },
